# SLICwithRAG

./: .gitignore  README.md
Backup arff/demo/: test.arff  training.arff
Base/: test.arff  test.arff.svm  training.arff
Base/classe_00/: 72h1.1-000001.jpg_00009.tif  72h1.1-000001.jpg_00034.tif  72h1.1-000001.jpg_00046.tif  72h1.1-000001.jpg_00048.tif  72h1.1-000001.jpg_00096.tif  72h1.1-000001.jpg_00101.tif  72h1.1-000001.jpg_00107.tif  72h1.1-000001.jpg_00108.tif  72h1.1-000001.jpg_00126.tif  72h1.1-000001.jpg_00135.tif  72h1.1-000001.jpg_00139.tif  72h1.1-000001.jpg_00141.tif  72h1.1-000001.jpg_00143.tif  72h1.1-000001.jpg_00147.tif  72h1.1-000001.jpg_00160.tif  72h1.1-000001.jpg_00163.tif  72h1.1-000001.jpg_00168.tif  72h1.1-000001.jpg_00180.tif  72h1.1-000001.jpg_00195.tif  72h1.1-000001.jpg_00206.tif  72h1.1-000001.jpg_00214.tif  72h1.1-000001.jpg_00230.tif  72h1.1-000001.jpg_00236.tif  72h1.1-000001.jpg_00237.tif  72h1.1-000001.jpg_00262.tif  72h1.1-000001.jpg_00289.tif  72h1.1-000001.jpg_00293.tif  72h1.1-000001.jpg_00301.tif  72h1.1-000001.jpg_00306.tif  72h1.1-000001.jpg_00312.tif  72h1.1-000001.jpg_00428.tif  72h1.1-000001.jpg_00429.tif  72h1.1-000001.jpg_00430.tif  72h3.1-000004.14res.10.jpg_00166.tif  72h3.1-000004.14res.10.jpg_00170.tif  72h3.1-000004.14res.10.jpg_00194.tif  72h3.1-000004.14res.10.jpg_00290.tif  (+231 more)
python-superpixel.git/: .gitignore  README.md  install_ubuntu.sh
python-superpixel.git/src/: .saida.txt.kate-swp  CHANGELOG.md  CMakeLists.txt  README.md  arff2svm.py  gSLICrInterface.cpp  gSLICrInterface.h  gSLICrInterface.i  reconhecimento_celulas_diretorio.py  slicParametros.py  slicParametros_backup.py  slicparametros.sh  wekaWrapper.py
python-superpixel.git/src/Estudo da rag/: nodos_rag_saida.txt  nos.txt
python-superpixel.git/src/extrai_atributos/: README.md  extraiAtributos.py  extratores.py
(+400 files in other folders)
